Get to display on GH?

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+== RI Assessment
+
 This project is not open source, my regrets.  If you stumble upon it, look but don't touch =P.
 
 Copyright 2009 David Hasson.
